--- a/src/main/resources/localization/TheWarrior-CardStrings.json
+++ b/src/main/resources/localization/TheWarrior-CardStrings.json
@@ -4,7 +4,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage, combo deal extra 33%.",
+      		"Scratch", "deal !D! damage.",
       		"Feint", "give !M! Distracted."
     	]
 	},
@@ -14,7 +14,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted.",
-      		"Thrust", "deal !D! damage, combo deal extra 25%."
+      		"Thrust", "deal !D! damage."
     	]
 	},
 	"TheWarrior:Sword": {
@@ -22,8 +22,8 @@
 		"DESCRIPTION": "Choose: Thrust or Strike.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage, combo deal extra 25%.",
-      		"Strike", "deal !D! damage and give 10 Dazed."
+      		"Thrust", "deal !D! damage.",
+      		"Strike", "deal !D! damage."
     	]
 	},
 	"TheWarrior:Axe": {
@@ -31,7 +31,7 @@
 		"DESCRIPTION": "Choose: Strike or Disarm.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Strike", "deal !D! damage and give 10 Dazed.",
+      		"Strike", "deal !D! damage.",
       		"Disarm", "give !M! Distracted."
     	]
 	},
@@ -41,7 +41,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Disarm", " give !M! Distracted.",
-      		"Hammer", "deal !D! damage and give 33 Dazed."
+      		"Hammer", "deal !D! damage."
     	]
 	},
 	"TheWarrior:Shield": {
@@ -65,7 +65,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage, combo deal extra 33%.",
+      		"Scratch", "deal !D! damage.",
       		"Feint", "give !M! Distracted."
     	]
 	},
@@ -75,7 +75,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted.",
-      		"Thrust", "deal !D! and give 1 Weakened, combo deal extra 20%."
+      		"Thrust", "deal !D! and give 1 Weakened."
     	]
 	},
 	"TheWarrior:WoundingSword": {
@@ -83,8 +83,8 @@
 		"DESCRIPTION": "Choose: Thrust or Strike.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage, give 1 Vulnerable, combo deal extra 20%.",
-      		"Strike", "deal !D! damage and give 12 Dazed."
+      		"Thrust", "deal !D! damage, give 1 Vulnerable.",
+      		"Strike", "deal !D! damage."
     	]
 	},
 	"TheWarrior:WoundingAxe": {
@@ -92,8 +92,8 @@
 		"DESCRIPTION": "Choose: Strike or Disarm.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Strike", "deal !D! damage and give 12 Dazed.",
-      		"Disarm", "Disarm 40, give !M! Distracted."
+      		"Strike", "deal !D! damage.",
+      		"Disarm", "give !M! Distracted."
     	]
 	},
 	"TheWarrior:WoundingHammer": {
@@ -102,7 +102,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Disarm", "give !M! Distracted.",
-      		"Hammer", "Hammer 250, deal !D! damage, give 1 Vulnerable and give 33 Dazed."
+      		"Hammer", "deal !D! damage, give 1 Vulnerable."
     	]
 	},
 	"TheWarrior:Taunt": {
@@ -114,7 +114,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage and give 2 Poison, combo deal extra 33%.",
+      		"Scratch", "deal !D! damage and give 2 Poison.",
       		"Feint", "give !M! Distracted."
     	]
 	},
@@ -124,7 +124,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted.",
-      		"Thrust", "deal !D! damage, combo deal extra 25%."
+      		"Thrust", "deal !D! damage."
     	]
 	},
 	"TheWarrior:PoisonousSword": {
@@ -132,7 +132,7 @@
 		"DESCRIPTION": "Choose: Thrust or Strike. When deal damage, give 3 Poison.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage, combo deal extra 25%.",
+      		"Thrust", "deal !D! damage.",
       		"Strike", "deal !D! damage, give 10 Dazed."
     	]
 	},
@@ -151,7 +151,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Disarm", "give !M! Distracted.",
-      		"Hammer", "deal !D! damage and give 33 Dazed."
+      		"Hammer", "deal !D! damage."
     	]
 	},
 	"TheWarrior:Envenom": {
@@ -163,7 +163,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage, give 2 Bleeding, combo deal extra 33%.",
+      		"Scratch", "deal !D! damage, give 2 Bleeding.",
       		"Feint", "give !M! Distracted and 2 Bleeding."
     	]
 	},
@@ -173,7 +173,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted and 2 Bleeding.",
-      		"Thrust", "deal !D! damage and give 2 Bleeding, combo deal extra 20%."
+      		"Thrust", "deal !D! damage and give 2 Bleeding."
     	]
 	},
 	"TheWarrior:SpikySword": {
@@ -181,7 +181,7 @@
 		"DESCRIPTION": "Choose: Thrust or Strike.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage and give 3 Bleeding, combo deal extra 25%.",
+      		"Thrust", "deal !D! damage and give 3 Bleeding.",
       		"Strike", "deal !D! damage, give 10 Dazed and give 3 Bleeding."
     	]
 	},
@@ -228,7 +228,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "take 2 and deal !D! damage, give 1 Bleeding, combo deal extra 20%.",
+      		"Scratch", "take 2 and deal !D! damage, give 1 Bleeding.",
       		"Feint", "give !M! Distracted."
     	]
 	},
@@ -238,7 +238,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted.",
-      		"Thrust", "deal !D! damage and put a Dazed in your draw pile, combo deal extra 20%."
+      		"Thrust", "deal !D! damage and put a Dazed in your draw pile."
     	]
 	},
 	"TheWarrior:HeavySword": {
@@ -246,8 +246,8 @@
 		"DESCRIPTION": "Choose: Thrust or Strike.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage, combo deal extra 30%. Put a Dazed into your draw pile.",
-      		"Strike", "deal !D! damage and give 18 Dazed. Put a Dazed into your draw pile."
+      		"Thrust", "deal !D! damage. Put a Dazed into your draw pile.",
+      		"Strike", "deal !D! damage. Put a Dazed into your draw pile."
     	]
 	},
 	"TheWarrior:HeavyAxe": {
@@ -278,7 +278,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint. When deal damage, if enemy has Bleeding, give 2 Poison.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage, combo deal extra 28%.",
+      		"Scratch", "deal !D! damage.",
       		"Feint", "Feint 12, give !M! Distracted."
     	]
 	},
@@ -288,7 +288,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted.",
-      		"Thrust", "deal !D! damage, combo deal extra 21%."
+      		"Thrust", "deal !D! damage."
     	]
 	},
 	"TheWarrior:ShortSword": {
@@ -296,7 +296,7 @@
 		"DESCRIPTION": "Choose: Thrust or Strike. When deal damage, if enemy has Bleeding, give 3 Poison.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage, combo deal extra 21%.",
+      		"Thrust", "deal !D! damage.",
       		"Strike", "deal !D! damage and give 8 Dazed."
     	]
 	},
@@ -314,8 +314,8 @@
 		"DESCRIPTION": "Choose: Disarm or Hammer. When deal damage, if enemy has Poison, give 4 Bleeding.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Disarm", " give !M! Distracted.",
-      		"Hammer", "deal !D! damage and give 26 Dazed."
+      		"Disarm", "give !M! Distracted.",
+      		"Hammer", "deal !D! damage."
     	]
 	},
 	"TheWarrior:WoundPain": {
@@ -327,7 +327,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage and give 2 Bleeding, combo deal extra 33%.",
+      		"Scratch", "deal !D! damage and give 2 Bleeding.",
       		"Feint", "give !M! Distracted."
     	]
 	},
@@ -337,7 +337,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted and give 2 Bleeding.",
-      		"Thrust", "deal !D! damage and give 1 Vulnerable, combo deal extra 25%."
+      		"Thrust", "deal !D! damage and give 1 Vulnerable."
     	]
 	},
 	"TheWarrior:StrongSword": {
@@ -345,8 +345,8 @@
 		"DESCRIPTION": "Choose: Thrust or Strike.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage, combo deal extra 25%.",
-      		"Strike", "deal !D! damage, give 2 Weakened and 16 Dazed."
+      		"Thrust", "deal !D! damage.",
+      		"Strike", "deal !D! damage, give 2 Weakened."
     	]
 	},
 	"TheWarrior:StrongAxe": {
@@ -354,7 +354,7 @@
 		"DESCRIPTION": "Choose: Strike or Disarm.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Strike", "deal !D! damage, give 3 Bleeding and 16 Dazed.",
+      		"Strike", "deal !D! damage, give 3 Bleeding.",
       		"Disarm", "give !M! Distracted."
     	]
 	},
@@ -364,7 +364,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Disarm", " give !M! Distracted.",
-      		"Hammer", "deal !D! damage and give 40 Dazed."
+      		"Hammer", "deal !D! damage."
     	]
 	},
 	"TheWarrior:Prepared": {
@@ -377,7 +377,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage or 3 more if enemy has Vulnerable, combo deal extra 33%.",
+      		"Scratch", "deal !D! damage or 3 more if enemy has Vulnerable.",
       		"Feint", "give !M! Distracted or 1 more if enemy has Weakened."
     	]
 	},
@@ -387,7 +387,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "take 2 damage, give !M! Distracted.",
-      		"Thrust", "deal !D! damage, combo deal extra 25%, if enemy has Bleeding, deal double."
+      		"Thrust", "deal !D! damage, if enemy has Bleeding, deal double."
     	]
 	},
 	"TheWarrior:SpecialSword": {
@@ -395,7 +395,7 @@
 		"DESCRIPTION": "Choose: Thrust or Strike.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage, combo deal extra 25%. If enemy has Bleeding, deal 50% more.",
+      		"Thrust", "deal !D! damage. If enemy has Bleeding, deal 50% more.",
       		"Strike", "deal !D! damage, give 10 Dazed. If enemy has Bleeding, deal 50% more."
     	]
 	},
@@ -414,7 +414,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Disarm", "discard 1 card, give 39(52) Distracted.",
-      		"Hammer", "discard 1 card, deal 25(32) damage and give 37 Dazed."
+      		"Hammer", "discard 1 card, deal 25(32) damage."
     	]
 	},
 	"TheWarrior:Bloody": {
@@ -451,7 +451,7 @@
 		"DESCRIPTION": "Choose: Scratch or Feint.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Scratch", "deal !D! damage and give 3 Bleeding, combo deal extra 33%.",
+      		"Scratch", "deal !D! damage and give 3 Bleeding.",
       		"Feint", "give !M! Distracted and give 3 Bleeding."
     	]
 	},
@@ -461,7 +461,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Feint", "give !M! Distracted.",
-      		"Thrust", "deal !D! damage and give 4 Bleeding, combo deal extra 10%."
+      		"Thrust", "deal !D! damage and give 4 Bleeding."
     	]
 	},
 	"TheWarrior:WaveBladeSword": {
@@ -469,7 +469,7 @@
 		"DESCRIPTION": "Choose: Thrust or Strike.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Thrust", "deal !D! damage and give 5 Bleeding, combo deal extra 18%. Put a Wound into your draw pile.",
+      		"Thrust", "deal !D! damage and give 5 Bleeding. Put a Wound into your draw pile.",
       		"Strike", "deal !D! damage, give 10 Dazed and 5 Bleeding. Put a Wound into your draw pile."
     	]
 	},
@@ -478,8 +478,8 @@
 		"DESCRIPTION": "Choose: Strike or Disarm.",
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
-      		"Strike", "deal !D! damage and give 35 Dazed. Add a Dazed into your draw pile.",
-      		"Disarm", "give !M! Distracted and 20 Dazed. Add a Dazed into your draw pile."
+      		"Strike", "deal !D! damage. Add a Dazed into your draw pile.",
+      		"Disarm", "give !M! Distracted. Add a Dazed into your draw pile."
     	]
 	},
 	"TheWarrior:UltralightHammer": {
@@ -488,7 +488,7 @@
 		"EXTENDED_DESCRIPTION": [
 			"Choose:",
       		"Disarm", "give !M! Distracted.",
-      		"Hammer", "deal !D! damage and give 11 Dazed."
+      		"Hammer", "deal !D! damage."
     	]
 	},
 	"TheWarrior:PreparingShield": {
